src/Deploy/identity-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deployment
  labels:
    app: identity-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      name: identity
      labels:
        app: identity
        app.kubernetes.io/name: identity
    spec:
      containers:
        - name: identity-deployment
          image: hugochacass/vebtechtask
          ports:
            - containerPort: 443
              name: https-web-api
            - containerPort: 80
              name: http-web-api
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health-check
              port: 80
          readinessProbe:
            httpGet:
              path: /health-check
              port: 80
      restartPolicy: Always
