src/Deploy/identity-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-db-service
spec:
  selector:
    app: identity-db
    app.kubernetes.io/name: identity-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
