src/Deploy/identity-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-redis-service
spec:
  selector:
    app: identity-redis
    app.kubernetes.io/name: identity-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
