src/Deploy/identity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-service
spec:
  selector:
    app.kubernetes.io/name: identity
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
      targetPort: 80
      protocol: TCP
